move group project out of profile to desktop

--- a/style.css
+++ b/style.css
@@ -52,6 +52,6 @@ main h2 {
 
 .Julia-style {
     color: green;
-    background-color: white;
+    background-color: rgb(133, 133, 133);
     padding: 3px;
 }
